# video-note-generator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
prompts/: chapter.md  summarize.md
src/video_notes/: __init__.py  ai.py  chapters.py  cleaner.py  main.py  markdown.py  models.py  parser.py  pipeline.py  screenshots.py  summarize.py  workspace.py
tests/: test_ai.py  test_chapters.py  test_cleaner.py  test_markdown.py  test_parser.py  test_pipeline.py  test_summarize.py  test_workspace.py
tests/fixtures/: noisy.srt  sample.srt
